@@ -34,6 +34,8 @@ class Ethna_Renderer_Smarty extends Ethna_Renderer
         
         $this->engine =& new Smarty;
         
+        // ディレクトリ関連は Controllerによって実行時に設定
+        // TODO: iniファイルによって上書き可にするかは要検討
         $template_dir = $controller->getTemplatedir();
         $compile_dir = $controller->getDirectory('template_c');
 
@@ -43,7 +45,18 @@ class Ethna_Renderer_Smarty extends Ethna_Renderer
         $this->engine->compile_dir = $this->compile_dir;
         $this->engine->compile_id = md5($this->template_dir);
 
-        // 一応がんばってみる
+        //  デリミタは Ethna_Config を見る
+        $smarty_config = isset($this->config['smarty'])
+                       ? $this->config['smarty']
+                       : array();
+        if (array_key_exists('left_delimiter', $smarty_config)) {
+            $this->engine->left_delimiter = $smarty_config['left_delimiter'];
+        }
+        if (array_key_exists('right_delimiter', $smarty_config)) {
+            $this->engine->right_delimiter = $smarty_config['right_delimiter'];
+        }
+
+        // コンパイルディレクトリは必須なので一応がんばってみる
         if (is_dir($this->engine->compile_dir) === false) {
             Ethna_Util::mkdir($this->engine->compile_dir, 0755);
         }
