@@ -26,7 +26,7 @@
 -- デフォルトで生成されるレイアウトテンプレートの調整
 -- cssの変更
 -- UrlHandler と .htaccess (mod_rewrite) を利用するためのひな形を生成
-
+- Smarty の設定（現在はデリミタのみ）を [appid]-ini.php に書くことが出来るようにした
 
 *** bug fix
 
@@ -42,6 +42,7 @@
 -- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17894
 - Ethna_Plugin_Logwriter の debug_backtrace の一部が取得できず、E_NOTICE が出るバグを修正 (thanks: http://www.remix.gr.jp/)
 - cli 環境で Ethna_Session::start を叩いたときに $_SERVER 変数がないために E_NOTICE が出る問題を修正
+- Smartyのデリミタを変更している場合にi18nコマンドが機能しないバグを修正 (#18668)
 
 ** 2.5.0-preview5
 
